<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">Aria2 Remote For Android</string>
	<string name="new_download">New Download</string>
	<string name="pause_download">Pause All</string>
	<string name="resume_download">Resume Paused</string>
	<string name="remove_download">Purge Completed</string>
	<string name="global_speed_format">Download: <xliff:g id="download_speed">%s</xliff:g>, Upload: <xliff:g id="upload_speed">%s</xliff:g></string>
	<string name="pick_download_item_action">Pick Download Item Action</string>
	<string name="pause">Pause</string>
	<string name="resume">Resume</string>
	<string name="restart">Restart</string>
	<string name="remove">Remove</string>
	<string name="add_download_url">Add Url</string>
	<string name="add_download_torrent">Add Torrent File</string>
	<string name="add_download_metalink">Add Metalink File</string>
    <string name="action_global_option">Global Option</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="title_settings_activity">Settings</string>
    <string name="title_global_option_activity">Global Option</string>
	<string name="title_download_item_info_activity">Download Item Info</string>
    <string name="pref_download_settings">Download Settings</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="pref_title_directory">Directory</string>
    <string name="pref_summary_directory">Where the downloaded files will be stored</string>
    <string name="pref_title_log">Log</string>
    <string name="pref_summary_log">The file name of the log file</string>
    <string name="pref_title_max_concurrent_downloads">Concurrent Downloads</string>
    <string name="pref_summary_max_concurrent_downloads">Number of parallel downloads</string>
    <string name="pref_title_check_integrity">Integrity Check</string>
    <string name="pref_summary_check_integrity">Check file integrity by validating piece hashes or a hash of entire file</string>
    <string name="pref_title_continue">Continue Downloading</string>
	<string name="pref_summary_continue">Continue downloading a partially downloaded file</string>
	<string name="HTTP_FTP_settings">HTTP/FTP Settings</string>
    <string name="HTTP_specific_settings">HTTP Specific Settings</string>
    <string name="pref_title_check_certificate">Check Certificate</string>
    <string name="pref_summary_check_certificate">Verify the peer using certificates specified in &#8211;&#8211;ca&#8211;certificate option. Default: true</string>
    <string name="pref_title_http_accept_gzip">Http Accept Gzip</string>
    <string name="pref_summary_http_accept_gzip">Send Accept: deflate, gzip request header and inflate response if remote server responds with Content-Encoding: gzip or Content-Encoding: deflate. Default: false</string>
    <string name="pref_title_http_auth_challenge">Http Auth Challenge</string>
    <string name="pref_summary_http_auth_challenge">Send HTTP authorization header only when it is requested by the server</string>
    <string name="pref_title_http_no_cache">Http No Cache</string>
    <string name="pref_summary_http_no_cache">Send Cache&#8211;Control: no&#8211;cache and Pragma: no&#8211;cache header to avoid cached content. If false is given, these headers are not sent and you can add Cache&#8211;Control header with a directive you like using &#8211;&#8211;header option. Default: false</string>
    <string name="pref_title_http_user">Http User</string>
    <string name="pref_summary_http_user">Set HTTP user. This affects all URIs</string>
    <string name="pref_title_http_passwd">Http Passwd</string>
    <string name="pref_summary_http_passwd">Set HTTP password. This affects all URIs.</string>
    <string name="pref_title_http_proxy">Http Proxy</string>
    <string name="pref_summary_http_proxy">Use this proxy server for HTTP. To erase previously defined proxy, use "". See also &#8211;&#8211;all&#8211;proxy option. This affects all URIs. The format of PROXY is [http://][USER:PASSWORD@]HOST[:PORT]</string>
    <string name="pref_title_http_proxy_passwd">Http Proxy Passwd</string>
	<string name="pref_summary_http_proxy_passwd">Set password for &#8211;&#8211;http&#8211;proxy option</string>
	<string name="pref_title_http_proxy_user">Http Proxy User</string>
	<string name="pref_summary_http_proxy_user">Set user for &#8211;&#8211;http&#8211;proxy option</string>
	<string name="pref_title_https_proxy">Https Proxy</string>
    <string name="pref_summary_https_proxy">Use this proxy server for HTTPS. To erase previously defined proxy, use "". See also &#8211;&#8211;all&#8211;proxy option. This affects all URIs. The format of PROXY is [http://][USER:PASSWORD@]HOST[:PORT]</string>
    <string name="pref_title_https_proxy_passwd">Https Proxy Passwd</string>
	<string name="pref_summary_https_proxy_passwd">Set password for &#8211;&#8211;https&#8211;proxy option</string>
	<string name="pref_title_https_proxy_user">Https Proxy User</string>
	<string name="pref_summary_https_proxy_user">Set user for &#8211;&#8211;https&#8211;proxy option</string>
	<string name="pref_title_referer">Referer</string>
	<string name="pref_summary_referer">Set Referer. This affects all URIs. If * is given, each request URI is used as a referer. This may be useful when used with &#8211;&#8211;parameterized&#8211;uri option</string>
	<string name="pref_title_enable_http_keep_alive">Enable HTTP Keep Alive</string>
	<string name="pref_summary_enable_http_keep_alive">Enable HTTP/1.1 persistent connection. Default: true</string>
	<string name="pref_title_enable_http_pipelining">Enable HTTP Pipelining</string>
	<string name="pref_summary_enable_http_pipelining">Enable HTTP/1.1 pipelining. Default: false</string>
	<string name="pref_title_header">Header</string>
	<string name="pref_summary_header">Append HEADER to HTTP request header. You can use this option repeatedly to specify more than one header:$ aria2c &#8211;&#8211;header="X&#8211;A: b78" &#8211;&#8211;header="X&#8211;B: 9J1" "http://host/file"</string>
	<string name="pref_title_save_cookies">Save Cookies</string>
	<string name="pref_summary_save_cookies">Save Cookies to FILE in Mozilla/Firefox(1.x/2.x)/ Netscape format. If FILE already exists, it is overwritten. Session Cookies are also saved and their expiry values are treated as 0. Possible Values: /path/to/file</string>
	<string name="pref_title_use_head">Use Head</string>
	<string name="pref_summary_use_head">Use HEAD method for the first request to the HTTP server. Default: false</string>
	<string name="pref_title_user_agent">User Agent</string>
	<string name="pref_summary_user_agent">Set user agent for HTTP(S) downloads. Default: aria2/$VERSION, $VERSION is replaced by package version</string>
    <string name="FTP_specific_settings">FTP Specific Settings</string>
    <string name="pref_title_ftp_user">FTP User</string>
    <string name="pref_summary_ftp_user">Set FTP user. This affects all URIs. Default: anonymous</string>
    <string name="pref_title_ftp_passwd">FTP Passwd</string>
    <string name="pref_summary_ftp_passwd">Set FTP password. This affects all URIs. If user name is embedded but password is missing in URI, aria2 tries to resolve password using .netrc. If password is found in .netrc, then use it as password. If not, use the password specified in this option. Default: ARIA2USER@</string>
    <string name="pref_title_ftp_pasv">FTP pasv</string>
    <string name="pref_summary_ftp_pasv">Use the passive mode in FTP. If false is given, the active mode will be used. Default: true</string>
    <string name="pref_title_ftp_proxy">FTP Proxy</string>
    <string name="pref_title_Advanced">Advanced Settings</string>
    <string name="pref_title_Basic">Basic Settings</string>
    <string name="pref_title_all_proxy">All Proxy</string>
    <string name="pref_summary_all_proxy">Use this proxy server for all protocols</string>
    <string name="pref_title_dry_run">Dry Run</string>
    <string name="pref_summary_dry_run">If true is given, aria2 just checks whether the remote file is available and doesn\'t download data</string>
    <string name="pref_title_lowest_speed_limit">Lowest Speed Limit</string>
    <string name="pref_summary_lowest_speed_limit">Close connection if download speed is lower than or equal to this value(bytes per sec)</string>
    <string name="pref_title_max_file_not_found">Max File Not Found</string>
    <string name="pref_summary_max_file_not_found">If aria2 receives "file not found" status from the remote HTTP/FTP servers NUM times without getting a single byte, then force the download to fail</string>
    <string name="pref_title_no_netrc">Disables Netrc Support</string>
    <string name="pref_summary_no_netrc">Netrc support is enabled by default</string>
    <string name="pref_title_no_proxy">No Proxy</string>
 	<string name="pref_summary_no_proxy">Specify comma separated hostnames, domains and network address with or without CIDR block where proxy should not be used</string>
    <string name="pref_title_proxy_method">Proxy Method</string>
    <string name="pref_summary_proxy_method">Set the method to use in proxy request method Default : get</string>
    <string name="pref_proxy_method_get">get</string>
    <string name="pref_title_remote_time">Remote Time</string>
    <string name="pref_summary_remote_time">Retrieve timestamp from the remote server</string>
    <string name="pref_title_retry_wait">Retry Wait</string>
    <string name="pref_summary_retry_wait">Set the seconds to wait between retries Default : 0</string>
    <string name="pref_title_server_stat_of">Server Stat Of</string>
    <string name="pref_summary_server_stat_of">Specify the filename to which performance profile of the servers is saved</string>
    <string name="pref_title_split">Split</string>
	<string name="pref_summary_split">Download a file using N connections</string>
	<string name="pref_title_stream_piece_selector">Stream Piece Selector</string>
	<string name="pref_summary_stream_piece_selector">Specify piece selection algorithm used in HTTP/FTP download</string>
	<string name="pref_stream_piece_selector_default">default</string>
	<string name="pref_title_uri_selector">Uri Selector</string>
	<string name="pref_summary_stream_uri_selector">Specify URI selection algorithm</string>
	<string name="pref_uri_selector_feedback">feedback</string>
    <string name="pref_title_timeout">Timeout</string>
    <string name="pref_summary_timeout">Set timeout in seconds Default : 60</string>
    <string name="torrent_metalink_settings">Torrent/Metalink Settings</string>
    <string name="torrent_specific_settings">Torrent Specific Settings</string>
    <string name="metalink_specific_settings">Metalink Specific settings</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="pref_connection_title">Connection Settings</string>
    <string name="pref_title_remote">Remote</string>
    <string name="pref_title_host">Host</string>
    <string name="pref_title_port">Port</string>
    <string name="pref_title_encryption">Encryption</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_summary_remote">Enable this if you want to connect to a remote server</string>
    <string name="pref_summary_host">The name or IP of the server aria2 run on</string>
    <string name="pref_summary_port">The port aria2 listen on the remote server</string>
    <string name="pref_summary_encryption">Enable encrytion for the data send/received. If this isn\'t enabled on the remote server connection will fail</string>
    <string name="pref_summary_username">The username you defined on the remote server</string>
    <string name="pref_summary_password">The password you defined on the remote server</string>
</resources>