<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Download Preferences -->
	<PreferenceCategory 
	    android:title="@string/pref_download_settings"
	    android:key="pref_key_download_settings">
		<PreferenceScreen 
		    android:key="button_basic_settings_category_key"
        	android:title="@string/basic_settings"
        	android:persistent="false">
        	
	       	<EditTextPreference
	        	android:key="pref_key_dir"
	        	android:summary="@string/pref_summary_directory"
	        	android:title="@string/pref_title_directory"
	        	android:defaultValue=""/><!-- TODO : Find the good one -->
	        	
	        <EditTextPreference
	        	android:key="pref_key_log"
	        	android:summary="@string/pref_summary_log"
	        	android:title="@string/pref_title_log"
	        	android:defaultValue=""/>
		    	    
		   	<EditTextPreference 
		   	    android:key="pref_key_concurrent"
		   	    android:summary="@string/pref_summary_concurrent"
		   	    android:title="@string/pref_title_concurrent"
		   	    android:defaultValue="5"/>
		   	
		   	<CheckBoxPreference 
		   	    android:key="pref_key_integrity"
		   	    android:title="@string/pref_title_integrity"
		   	    android:defaultValue="false"/>
		   	
		   	<CheckBoxPreference 
		   	    android:key="pref_key_continue"
		   	    android:title="@string/pref_title_continue"
		   	    android:defaultValue="false"/>
		   	
		</PreferenceScreen>
		
		<PreferenceScreen 
		    android:key="button_HTTP_FTP_settings_category_key"
        	android:title="@string/HTTP_FTP_settings"
        	android:persistent="false">
        	<PreferenceCategory 
        	    android:key="pref_key_HTTP/FTP_advanced_settings"
        	    android:title="@string/pref_title_Advanced">
			    <PreferenceScreen 
			    	android:key="button_HTTP_specific_settings_category_key"
	        		android:title="@string/HTTP_specific_settings"
	        		android:persistent="false">
	        		
	        		<CheckBoxPreference 
			   	    	android:key="pref_key_check_certificate"
			   	    	android:title="@string/pref_title_check_certificate"
			   	    	android:summary="@string/pref_summary_check_certificate"
			   	    	android:defaultValue="true"/>
	        		
	        		<CheckBoxPreference
	        		    android:key="pref_key_http_accept_gzip"
			   	    	android:title="@string/pref_title_http_accept_gzip"
			   	    	android:summary="@string/pref_summary_http_accept_gzip"
			   	    	android:defaultValue="true"/> 
			   	    	
	        		<CheckBoxPreference
	        		    android:key="pref_key_http_auth_challenge"
			   	    	android:title="@string/pref_title_http_auth_challenge"
			   	    	android:summary="@string/pref_summary_http_auth_challenge"
			   	    	android:defaultValue="false"/>
	        		
	        		<CheckBoxPreference
	        		    android:key="pref_key_http_no_cache"
			   	    	android:title="@string/pref_title_http_no_cache"
			   	    	android:summary="@string/pref_summary_http_no_cache"
			   	    	android:defaultValue="false"/>

	        		<EditTextPreference 
			   	    	android:key="pref_key_http_user"
			   	    	android:title="@string/pref_title_http_user"
				   	    android:summary="@string/pref_summary_http_user"
		   	    		/>
	        		
	        		<EditTextPreference 
			   	    	android:key="pref_key_http_passwd"
			   	    	android:title="@string/pref_title_http_passwd"
				   	    android:summary="@string/pref_summary_http_passwd"
		   	    		/>
	        		
	        		<EditTextPreference 
			   	    	android:key="pref_key_http_proxy"
			   	    	android:title="@string/pref_title_http_proxy"
				   	    android:summary="@string/pref_summary_http_proxy"
		   	    		/>
	        		
	        		<EditTextPreference 
			   	    	android:key="pref_key_http_proxy_passwd"
			   	    	android:title="@string/pref_title_http_proxy_passwd"
				   	    android:summary="@string/pref_summary_http_proxy_passwd"
		   	    		/>
	        		
	        		<EditTextPreference 
			   	    	android:key="pref_key_http_proxy_user"
			   	    	android:title="@string/pref_title_http_proxy_user"
				   	    android:summary="@string/pref_summary_http_proxy_user"
		   	    		/>
	        		
	        		<EditTextPreference 
			   	    	android:key="pref_key_https_proxy"
			   	    	android:title="@string/pref_title_https_proxy"
				   	    android:summary="@string/pref_summary_https_proxy"
		   	    		/>
	        		
	        		<EditTextPreference 
			   	    	android:key="pref_key_https_proxy_passwd"
			   	    	android:title="@string/pref_title_https_proxy_passwd"
				   	    android:summary="@string/pref_summary_https_proxy_passwd"
		   	    		/>
	        		
	        		<EditTextPreference 
			   	    	android:key="pref_key_https_proxy_user"
			   	    	android:title="@string/pref_title_https_proxy_user"
				   	    android:summary="@string/pref_summary_https_proxy_user"
		   	    		/>
	        		
	        		<EditTextPreference 
			   	    	android:key="pref_key_referer"
			   	    	android:title="@string/pref_title_referer"
				   	    android:summary="@string/pref_summary_referer"
		   	    		/>
	        		
	        		<CheckBoxPreference
	        		    android:key="pref_key_enable_http_keep_alive"
			   	    	android:title="@string/pref_title_enable_http_keep_alive"
			   	    	android:summary="@string/pref_summary_enable_http_keep_alive"
			   	    	android:defaultValue="true"/>
	        		
	        		<CheckBoxPreference
	        		    android:key="pref_key_enable_http_pipelining"
			   	    	android:title="@string/pref_title_enable_http_pipelining"
			   	    	android:summary="@string/pref_summary_enable_http_pipelining"
			   	    	android:defaultValue="false"/>
	        		
	        		<EditTextPreference 
			   	    	android:key="pref_key_header"
			   	    	android:title="@string/pref_title_header"
				   	    android:summary="@string/pref_summary_header"
		   	    		/>
	        		
	        		<EditTextPreference 
			   	    	android:key="pref_key_save_cookies"
			   	    	android:title="@string/pref_title_save_cookies"
				   	    android:summary="@string/pref_summary_save_cookies"
		   	    		/>
	        		
	        		<CheckBoxPreference
	        		    android:key="pref_key_use_head"
			   	    	android:title="@string/pref_title_use_head"
			   	    	android:summary="@string/pref_summary_use_head"
			   	    	android:defaultValue="false"/>
	        		
	        		<EditTextPreference 
			   	    	android:key="pref_key_user_agent"
			   	    	android:title="@string/pref_title_user_agent"
				   	    android:summary="@string/pref_summary_user_agent"
		   	    		/>
	        		
				</PreferenceScreen>
				
			    <PreferenceScreen 
			    	android:key="button_FTP_specific_settings_category_key"
	        		android:title="@string/FTP_specific_settings"
	        		android:persistent="false">	    
				</PreferenceScreen>
			</PreferenceCategory>
			<PreferenceCategory 
			    android:key="pref_key_HTTP/FTP_basic_settings"
			    android:title="@string/pref_title_Basic">
			    
			   	<EditTextPreference 
			   	    android:key="pref_key_all_proxy"
			   	    android:title="@string/pref_title_all_proxy"
			   	    android:summary="@string/pref_summary_all_proxy"/>
			   	
			   	<EditTextPreference 
			   	    android:key="pref_key_all_user"
			   	    android:title="@string/pref_title_all_user"
			   	    android:summary="@string/pref_summary_all_user"/>
			   	
			   	<EditTextPreference 
			   	    android:key="pref_key_all_passwd"
			   	    android:title="@string/pref_title_all_passwd"
			   	    android:summary="@string/pref_summary_all_passwd"/>
			   	<!-- 
			   	<EditTextPreference 
			   	    android:key="pref_key_connection_timeout"
			   	    android:title="@string/pref_title_connection_timeout"
			   	    android:summary="@string/pref_summary_connection_timeout"
			   	    android:defaultValue="60"/>
			   	 -->
			   	 
			   	<CheckBoxPreference 
		   	    	android:key="pref_key_dry_run"
		   	    	android:title="@string/pref_title_dry_run"
		   	    	android:summary="@string/pref_summary_dry_run"
		   	    	android:defaultValue="false"/>
			   	
			   	<EditTextPreference 
			   	    android:key="pref_key_lowest_speed_limit"
			   	    android:title="@string/pref_title_lowest_speed_limit"
			   	    android:summary="@string/pref_summary_lowest_speed_limit"
			   	    android:defaultValue="0"/>
			   	
			   	<EditTextPreference 
			   	    android:key="pref_key_max_connections"
			   	    android:title="@string/pref_title_max_connections"
			   	    android:summary="@string/pref_summary_max_conections"
			   	    android:defaultValue="1"/>
			   	
			   	<EditTextPreference 
			   	    android:key="pref_key_max_file_not_found"
			   	    android:title="@string/pref_title_max_file_not_found"
			   	    android:summary="@string/pref_summary_max_file_not_found"
			   	    android:defaultValue="0"/>
			   	
			   	<EditTextPreference 
			   	    android:key="pref_key_tries"
			   	    android:title="@string/pref_title_tries"
			   	    android:summary="@string/pref_summary_tries"
			   	    android:defaultValue="5"/>
			   	
			   	<EditTextPreference 
			   	    android:key="pref_key_min_split"
			   	    android:title="@string/pref_title_min_split"
			   	    android:summary="@string/pref_summary_min_split"/>
			   	
			   	<CheckBoxPreference 
		   	    	android:key="pref_key_no_netrc"
		   	    	android:title="@string/pref_title_no_netrc"
		   	    	android:summary="@string/pref_summary_no_netrc"
		   	    	android:defaultValue="false"/>
			   	
			   	<EditTextPreference 
			   	    android:key="pref_key_no_proxy"
			   	    android:title="@string/pref_title_no_proxy"
			   	    android:summary="@string/pref_summary_no_proxy"/>
			   	<!-- TODO : Find how to make the next node a list -->
			   	
			   	<ListPreference
			   	    android:key="pref_key_proxy_method"
			   	    android:title="@string/pref_title_proxy_method"
			   	    android:summary="@string/pref_summary_proxy_method"
			   	    android:dialogTitle="@string/pref_title_proxy_method"
			   	    android:entries="@array/pref_entries_proxy_method"
			        android:entryValues="@array/pref_values_proxy_method"
			        android:defaultValue="@string/pref_proxy_method_get" />
			   	
			   	<CheckBoxPreference 
			   	    android:key="pref_key_remote_time"
			   	    android:title="@string/pref_title_remote_time"
			   	    android:summary="@string/pref_summary_remote_time"
			   	    android:defaultValue="false"/>
			   	
			   	<CheckBoxPreference 
			   	    android:key="pref_key_reuse"
			   	    android:title="@string/pref_title_reuse"
			   	    android:summary="@string/pref_summary_reuse"
			   	    android:defaultValue="true"/>
			   	
			   	<EditTextPreference 
			   	    android:key="pref_key_retry_wait"
			   	    android:title="@string/pref_title_retry_wait"
			   	    android:summary="@string/pref_summary_retry_wait"
			   	    android:defaultValue="0"/>
			   	<EditTextPreference 
			   	    android:key="pref_key_server_stat_of"
			   	    android:title="@string/pref_title_server_stat_of"
			   	    android:summary="@string/pref_summary_server_stat_of"
			   	    />
			   	<EditTextPreference 
			   	    android:key="pref_key_split"
			   	    android:title="@string/pref_title_split"
			   	    android:summary="@string/pref_summary_split"
			   	    android:defaultValue="5"/>
			   	
		   		<ListPreference
			   	    android:key="pref_key_stream_piece_selector"
			   	    android:title="@string/pref_title_stream_piece_selector"
			   	    android:summary="@string/pref_summary_stream_piece_selector"
			   	    android:dialogTitle="@string/pref_title_stream_piece_selector"
			   	    android:entries="@array/pref_entries_stream_piece_selector"
			        android:entryValues="@array/pref_values_stream_piece_selector"
			        android:defaultValue="@string/pref_stream_piece_selector_default" />
		   		
		   		 <ListPreference
			        android:key="pref_key_uri_selector"
			        android:title="@string/pref_title_uri_selector"
			        android:summary="@string/pref_summary_stream_uri_selector"
			        android:dialogTitle="@string/pref_title_uri_selector"
			        android:entries="@array/pref_entries_uri_selector"
			        android:entryValues="@array/pref_values_uri_selector"
			        android:defaultValue="@string/pref_uri_selector_feedback" />
		   		
			   	<EditTextPreference 
			   	    android:key="pref_key_all_timeout"
			   	    android:title="@string/pref_title_timeout"
			   	    android:summary="@string/pref_summary_timeout"
			   	    android:defaultValue="60"/>
			</PreferenceCategory>
		    
		    
		</PreferenceScreen>   
		 
		<PreferenceScreen 
		    android:key="button_torrent_metalink_settings_category_key"
        	android:title="@string/torrent_metalink_settings"
        	android:persistent="false">
		    
		    <PreferenceScreen 
		    	android:key="button_torrent_specific_settings_category_key"
        		android:title="@string/torrent_specific_settings"
        		android:persistent="false">	    
			</PreferenceScreen>
		    
		    <PreferenceScreen 
		    	android:key="button_metalink_specific_settings_category_key"
        		android:title="@string/metalink_specific_settings"
        		android:persistent="false">	    
			</PreferenceScreen>	    
		    
		</PreferenceScreen>   
		 
		<PreferenceScreen 
		    android:key="button_advanced_settings_category_key"
        	android:title="@string/advanced_settings"
        	android:persistent="false">	    
		</PreferenceScreen>    
	    
	</PreferenceCategory>
	
	<!-- Connection Preferences -->
	<PreferenceCategory 
	    android:title="@string/pref_connection_title"
	    android:key="pref_key_connection_settings">"
	    <CheckBoxPreference
	        android:key="pref_key_remote"
	        android:summary="@string/pref_summary_remote"
	        android:title="@string/pref_title_remote"
	        android:defaultValue="false" />android:key="pref_key_connection_settings">
	    <EditTextPreference 
	        android:dependency="pref_key_remote"
	        android:key="pref_key_host"
	        android:summary="@string/pref_summary_host"
	        android:title="@string/pref_title_host"
	        android:defaultValue="localhost"/>
	    <EditTextPreference 
	        android:dependency="pref_key_remote"
	        android:key="pref_key_port"
	        android:summary="@string/pref_summary_port"
	        android:title="@string/pref_title_port"
	        android:defaultValue="6800"/>
	    <CheckBoxPreference 
	        android:dependency="pref_key_remote"
	        android:key="pref_key_encryption"
	        android:summary="@string/pref_summary_encryption"
	        android:title="@string/pref_title_encryption"
	        android:defaultValue="false"/>
	    <EditTextPreference 
	        android:dependency="pref_key_remote"
	        android:key="pref_key_username"
	        android:summary="@string/pref_summary_username"
	        android:title="@string/pref_title_username"
	        android:defaultValue=""/>
	    <EditTextPreference 
	        android:dependency="pref_key_remote"
	        android:key="pref_key_password"
	        android:summary="@string/pref_summary_password"
	        android:title="@string/pref_title_password"
	        android:inputType="textPassword"
	        android:defaultValue=""/>	        
	</PreferenceCategory>
</PreferenceScreen>