<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
      xmlns:yourapp="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/new_download"
		android:icon="@drawable/ic_menu_add"
		yourapp:showAsAction="ifRoom"
		android:title="@string/new_download">
		<menu>
            <item android:id="@+id/add_url"
                  android:title="@string/add_download_url" />
            <item android:id="@+id/add_torrent"
                  android:title="@string/add_download_torrent" />
            <item android:id="@+id/add_metalink"
                  android:title="@string/add_download_metalink" />
        </menu>
	</item>
	
	<item
		android:id="@+id/pause_download"
		android:icon="@drawable/ic_menu_pause"
		yourapp:showAsAction="ifRoom"
		android:title="@string/pause_download">
	</item>
	
	<item
		android:id="@+id/resume_download"
		android:icon="@drawable/ic_menu_resume"
		yourapp:showAsAction="ifRoom"
		android:title="@string/resume_download">
	</item>
	
	<item
		android:id="@+id/remove_download"
		android:icon="@drawable/ic_menu_remove"
		yourapp:showAsAction="ifRoom"
		android:title="@string/remove_download">
	</item>
	
	
	<item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_settings">
    </item>
    
    <item android:id="@+id/action_exit" 
        android:orderInCategory="100" 
        android:title="@string/exit" 
        android:showAsAction="never">
    </item>

</menu>